--- a/scss/components/_images.scss
+++ b/scss/components/_images.scss
@@ -6,6 +6,7 @@ img {
     width: 30px;
     border-right: 1px solid #c2c0c0;
     padding-right: .25em;
+    margin-right: .25em;
     
 }
 
