--- a/scss/components/_typography.scss
+++ b/scss/components/_typography.scss
@@ -41,6 +41,7 @@ h3{
 
 .profile-name{
     color: #fff;
+    margin-top: 1.5em;
 }
 
 #message, 
